--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,10 @@
 
 
 :root {
-  --main: #cabac8;
+  --main:  rgb(89, 123, 47, 1);/* #597B2F */
+  --main-light:  rgb(108, 145, 63); /* #6C913F */
+  --main-dark:  rgb(68, 94, 36);  /*#445E24*/
+  --main-transparent:  rgb(89, 123, 47, .7); 
   --dark1: #254E70;
   --dark2:#37718E;
   --light2: #eca400;
@@ -35,7 +38,7 @@
     color: white;
   }
   section { 
-    background-color: rgb(119, 119, 19);
+    /* background-color: rgb(119, 119, 19); */
   }
 
   /* Mobile menu button */
@@ -60,7 +63,7 @@
     height: 0.222rem;
     width: 1.5rem;
     margin-bottom: 0.278rem;
-    background: #ffffff;
+    background: var(--main-light);
     border-radius: 3px;
     z-index: 1;
     opacity: 1;
@@ -85,6 +88,7 @@
 
   #active:checked ~ .menu-btn span{
     opacity: 1;
+    background-color: white;
   }
   #active:checked ~ .menu-btn span:first-child{
     transform:
@@ -140,7 +144,7 @@
   }
 
   .menu ul li:hover {
-    border-bottom: 10px solid white;
+    border-bottom: 10px solid var(--main);
     transition: all 100ms ease;
   }
 
@@ -154,10 +158,11 @@
     /* background-color: rgb(177, 145, 177); */
     height: 100vh;
     scroll-snap-align: start;
+    /* z-index: 0; */
   }
 
   .page-front {
-    background-color: #8A7968;
+    /* background-color: #8A7968; */
     flex-direction: column;
     justify-content: space-around;
     /* align-items: center; */
@@ -167,18 +172,154 @@
     align-items: center;
     text-align: center;
   }
+  /* ABOUT */
   .page-about {
-    background-color: #626e38;
+    background-color: var(--main-light);
+    position: relative;
+
   }
-  /* SKILLS */
-  .page-skills {
-    /* background-color: #626e38; */
-    display: block;
+  .blob-wrapper {
+    /* background-color: var(--light1); */
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    
+    background-origin: center;
+    background-size: contain;
+    background-repeat: no-repeat;
   }
 
- 
+  .blob-img::before {
+    content: '';
+    position: absolute;
+    background-image: url('/img/profile-crop.png');
+    background-repeat: no-repeat;
+    background-origin: center;
+    background-size: contain;
+    width: 10rem;
+    height: 10rem;
+    z-index: 1;
+    top: -.5rem;
+    right: .2rem;
+  }
+  
+  .blob-img {
+    background-image: url('/img/egg.svg') ;
+    background-repeat: no-repeat;
+    background-origin: center;
+    background-size: contain;
+    width: 10.2rem;
+    height: 10.2rem;
+    position: relative;
+    z-index: 1;
+    transform: scale(1);
+  }
+  .blob-img::after {
+    content: '';
+    position: absolute;
+    background-image: url('/img/egg.svg') ;
+    top: 120px;
+    /* right: 3px; */
+    background-repeat: no-repeat;
+    background-origin: center;
+    background-size: contain;
+    width: 10rem;
+    height: 10rem;
+    transform: scaleY(10%) scaleX(65%);
+    z-index: 0;
+    filter: blur(23rem);
+    -webkit-filter: blur(4rem);
+  }
+
+  .blob-text {
+    font-size: 2rem;
+    color: white;
+    font-weight: 300;
+    position: relative;
+  }
+
+  .blob-text:after {
+    content: "They call me Mr. Egg";
+    position: absolute;
+    font-weight: 300;
+    /* background-image: url('/img/egg.svg') ; */
+    /* top: 80%; */
+    left: 0;
+    color: rgb(255, 255, 255);
+    top: 120px;
+    /* background-repeat: no-repeat;
+    background-origin: center;
+    background-size: contain; */
+    /* width: 10rem; */
+    /* height: 10rem; */
+    transform: scaleY(25%);
+    z-index: 4;
+    filter: blur(.3rem);
+    -webkit-filter: blur(.9rem); 
+  }
+
+  /* FIRST SPACER */
+  .divider1 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: auto;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+}
+.divider1 svg {
+    position: relative;
+    display: block;
+    width: calc(159% + 1.3px);
+    height: 15vh;
+}
+.divider1 .shape-fill {
+    fill: #6C913F;
+}
+
+  /* SKILLS */
+.page-skills {
+  background-color: var(--main);
+  display: block;
+  position: relative;
+}
+.spacer2 {
+  /* background-color: rgb(148, 238, 130); */
+  background-image: url('/img/bg/wave-light-main.svg');
+  width: 100%;
+  aspect-ratio: 900/675;
+  position: absolute;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  z-index: 0;
+  top: -1rem
+}
+.spacer3, .spacer4 {
+  /* background-color: rgb(148, 238, 130 ); */
+  background-image: url('/img/bg/wave-main-white2.svg');
+  width: 100%;
+  aspect-ratio: 900/675;
+  position: absolute;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  z-index: 0;
+  top: -2rem;
+}
+.spacer4 {
+  background-image: url('/img/bg/wave-white-main.svg');
+  top: -13%;
+}
+
 .skills-container {
   display: flex;
+  position: relative;
+  
   /* background-color: #a6ff00; */
   padding-top: 1rem;
   height: 100%;
@@ -221,22 +362,32 @@
 
   /* PROJECTS */
   .page-projects {
-    background-color: #92998f;
+    /* background-color: #92998f; */
     position: relative;
     height: unset;
   }
 
   .page-about > h1,
-  .page-projects > h1,
-  .page-skills > h1 { 
+  .page-skills > h1,
+  .page-projects > h1
+ { 
     padding: .5rem;
     font-weight: 700;
-    color: rgb(255, 255, 255); 
     font-size: 1rem;
     display: block;
     padding-left: 2rem;
+    /* z-index: 11; */
+    position: relative;
   }
-
+  .page-about > h1 {
+    color:  white;
+  }
+  .page-skills > h1 {
+    color: white;
+  }
+  .page-projects > h1 {
+    color: var(--main);
+  }
 .projects-container {
   margin: 0 auto;
   /* background-color: aquamarine; */
@@ -399,7 +550,8 @@
 } 
 
 .technologies-container {
-  background-color: #92998f;
+  background-color: var(--main);
+  background-color: white;
   border-radius: 5px;
   overflow: hidden;
   border-radius: .4rem;
@@ -409,7 +561,7 @@
 }
 .technologies-container h3 {
   overflow: hidden;
-  background-color: #626861;
+  background-color: var(--main);
   color: white;
   padding: .5rem;
   font-size: .75rem;
@@ -467,14 +619,15 @@
   margin-top: auto;
 }
 .project-info-buttons > * {
-  background-color: var(--light-blue);
+  background-color: var(--main);
   color: white;
+  /* color: var(--main); */
   padding: .47rem;
   border-radius: 4px;
   text-align: center;
   /* margin-left: .3rem; */
   transition: transform 60ms ease-in;
-  border-bottom: .15rem solid #162f44; 
+  border-bottom: .15rem solid var(--main-dark); 
 }
 .project-info-view-live {
   margin-right: .3rem;
@@ -561,7 +714,7 @@
 
 .project-card-btn {
   padding: .123rem .5rem;
-  background-color: rgba(0, 255, 242, 0.281);
+  background-color: var(--main-transparent);
   color:rgb(255, 255, 255);
   /* box-shadow: rgba(255, 255, 255, 0.25) 0px 1px 1px, #ffffff21 0px 0px 1px 1px; */
   border-radius: .4rem;
@@ -579,47 +732,22 @@
 #card-chess {background-image: url('../img/projects/chess.jpg');
 }
 
- 
-/* 
-@media (hover) {
-  .card-content {
-    transform: translateY(70%);
-    transition: 500ms ease transform;
-  }
-  .card:hover .card-content, .card:focus-within .card-content {
-    transform: translateY(0%);
-    transition-delay: 500ms;
-  }
-  .card:focus-within .card-content {
-    transition-duration: 0ms;
-  }
-  .card-content > *:not(.card-title) {
-    opacity: 0;
-    transition: opacity 500ms linear;
-  }
-  .card:hover .card-content > *:not(.card-title),
-  .card:focus-within .card-content > *:not(.card-title) {
-    opacity: 1;
-    transition-delay: 600ms;
-  }
-  .card-title::after {
-    transform: scaleX(0);
-  }
-}; */
-
-
+  
 
 
 
 
 
   .page-resume {
-    background-color: #6d3d3d;
+    /* background-color: #6d3d3d; */
     /* height: 30vh; */
+    position: relative;
     scroll-snap-align: center;
+    display: flex;
+    justify-content: center;
   }
   .page-contact {
-    background-color: #596392;
+    /* background-color: #596392; */
   }
 
 
@@ -630,6 +758,7 @@
   color:rgb(85, 85, 85);
   padding: .96rem;
   width: 70%;
+  max-width: 45ch;
   font-size: 1rem;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
@@ -638,6 +767,7 @@
   width: 3rem;
   height: 3rem;
   border: 3px solid rgb(255, 255, 255);
+  border: 3px solid var(--main);
   border-radius: 50%;
   animation: pulse 1.2s infinite;
   margin-top: 3rem;
@@ -645,13 +775,13 @@
   /* justify-self: flex-end  ; */
 }
 .arrow-wrapper:hover {
-  border: 3px solid rgb(85, 85, 85);
+  border: 3px solid var(--main-light);
   transform: scale(1.3);
   cursor: pointer;
 }
 .arrow {
   background-image: url("../img/arrow.svg");
-  filter: invert(100%) sepia(3%) saturate(13%) hue-rotate(334deg) brightness(102%) contrast(105%);
+  filter: invert(49%) sepia(46%) saturate(485%) hue-rotate(45deg) brightness(95%) contrast(87%);
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -677,16 +807,22 @@
 
 /* RESUME */
 .resume-btn-wrapper {
-  background-color: rosybrown;
   padding: 3rem;
-  border-radius: 3px;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  /* z-index: 1; */
 }
 
 .resume-btn-wrapper .resume-btn{
-  background-color: rgb(85, 85, 85);
+  background-color: var(--main);
+  color: white;
   padding: .5rem;
-  border-bottom: .3rem solid white;
+  border-bottom: .3rem solid var(--main-dark);
+  border-radius: .3rem;
+  text-align: center;
+
 }
 
 .resume-btn-wrapper .resume-btn:hover {
@@ -722,21 +858,12 @@
       background-color: rgb(255, 255, 255); 
       position: relative;
       width: 100%;
-      /* height: 100%;  */
       min-height: 100vh;
       top: 0rem;
       left: 0;
       right: 0;
       z-index: 0; 
       display: block;
-      /* margin: 1rem; */
-      /* display: grid; */
-      /* gap: 2.6rem;
-      grid: 
-      [row1-start] "header" 3rem [row1-end]
-      [row2-start] "body-left body-left" 1fr [row2-end]
-      [row3-start] "body-right body-right" 1fr [row3-end]
-      / 1fr 1fr 1fr;  */
       box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
       border-radius: .15rem;
       transform: translateX(0)
@@ -824,7 +951,24 @@
   }
 
   @media only screen and (min-width: 768px) {
+  /* FIRST SPACER */
+ 
+.divider1 svg {
+    position: relative;
+    display: block;
+    width: calc(159% + 1.3px);
+    height: 198px;
+} 
 
+.spacer2 {
+  top: -5rem
+}
+.spacer3 {
+  top: -40%
+}
+.spacer4 {
+  top: -5%;
+}
   .menu-btn {
     display: none;
   }
@@ -842,14 +986,17 @@
     background-color: unset;
     z-index: 1;
     position: fixed;
-    right: 0;
+    right: 2rem;
+    top: .25rem;
     display: flex;
     justify-items: flex-end;
     align-items: flex-end;
     flex-direction: column;
-    margin-right: 1rem;
+    /* margin-left: auto; */
     font-size: .85rem;
-    background-color: none;
+    /* background-color: white; */
+    /* width: 10%; */
+    
   }
     
   .menu ul {
@@ -864,23 +1011,34 @@
     display: flex;
     justify-content: flex-end;
     align-items: baseline;
-    margin-right: 1rem;
+    margin-right: 0rem;
+    
     }
 
 
   .menu ul li {
     padding: unset;
     margin:unset;
-    margin-top: .3rem;
+    /* margin-top: .3rem; */
     margin-left: .65rem;
+    border-radius: 1.4rem;
+    font-weight: 300;
+    outline: 0px solid var(--main-light);
+    background-color: white;
+    color: white !important;
+
   }
   .menu ul li:hover {
-    border: solid 0px
+    border: solid 0px;
+    transform: translateY(-2px);
+    font-weight: 700;
+    /* border-bottom: 3px solid var(--main); */
   }
   .menu ul li a {
     position: relative;
     letter-spacing: .03rem;
-    /* color:rgb(85, 85, 85) */
+    color: var(--main-light);
+    padding: 1rem 1rem;
   }
 
   .menu ul li a:after {
@@ -891,7 +1049,7 @@
     height: 1.4px;
     bottom: -.2rem;
     left: 0;
-    background-color: #ffffff;
+    /* background-color: var(--main-light); */
     transform-origin: bottom right;
     transition: transform 0.25s ease-out;
   }
@@ -900,46 +1058,15 @@
     transform: scaleX(1);
     transform-origin: bottom left;
   }
-  #menu-item-home > a:after {
-    content: unset;
-  }
-
-  #menu-item-home {
-    padding: unset;
-    margin:unset;
-    border: unset;
-    outline: unset;
-    transition: none;
-    margin-top: .3rem;
-    margin-left: .65rem;
-    background-color: rgba(255, 255, 255, 0);
-    color: rgb(95, 95, 95);
-    border-radius: .4rem;
-    padding: .3rem;
-    outline: 1px solid rgb(255, 255, 255);
-    color: white !important;
-  }
-  #menu-item-home:hover {
-    background-color: rgba(255, 255, 255, 0) !important;
-    color: white !important;
-    cursor: pointer;
-    font-weight: 900;
-    outline: 2px solid rgb(255, 255, 255);
-  }
-
-  #menu-item-home a {
-    color:  inherit;
-  }
+  
+  
 
 
   
   .projects-container {
     margin: unset;
-    padding: unset;
-    /* background-color: rgb(103, 139, 127); */
-    
-    margin: 3rem 20%;
-
+    padding: unset; 
+    margin: 3rem 20%; 
     display: grid;
     justify-content: space-between;
     grid-template-rows: 16rem 16rem;
@@ -948,9 +1075,6 @@
     position: relative;
   }
   .project-card {
-      /* flex-basis: 50%; */
-  /* min-height: 20%; */
-  /* max-height: 3rem; */
   border-radius: .15rem;
   margin: unset;
   /* margin-bottom: .5rem; */
