--- a/css/style.css
+++ b/css/style.css
@@ -46,15 +46,17 @@
     display: none
   }
 
+  
   .menu-btn {
     position: fixed;
     z-index: 2;
     top: -.75rem;
     padding: .75rem;
     border-radius: 50%;
-    top: 0;
+    top: .5rem;
     text-align: center;
-    right: 0;
+    right: .5rem;
+    background-color: white;
   }
 
   .menu-btn span {
@@ -88,7 +90,7 @@
 
   #active:checked ~ .menu-btn span{
     opacity: 1;
-    background-color: white;
+    background-color: var(--main-light);
   }
   #active:checked ~ .menu-btn span:first-child{
     transform:
@@ -266,7 +268,7 @@
   /* FIRST SPACER */
   .divider1 {
     position: absolute;
-    bottom: 0;
+    bottom: -5px;
     left: 0;
     width: auto;
     overflow: hidden;
@@ -321,28 +323,41 @@
   height: unset;
   min-height: 100%;
 }
-.skills-container { 
+.skills-container  { 
   position: relative;
   /* background-color: #a6ff007e;  */
   width: 85%;
   height: 85%;
-  margin: 0 auto;
-  padding: 3rem;
-  display: flex;
-  
+  margin: 30% auto;
+  padding: 1%;
+  display: flex; 
   flex-wrap: wrap;
   justify-content: center;
   align-items: center ; 
 }
 
 .skill {
-  /* flex-basis: 15%;
-  flex-shrink: 1;
-  flex-grow: 1;  */
+  flex-basis: 33%;
+  flex-shrink: 0;
+  flex-grow: 0; 
   padding: .5rem;
   /* height: 5rem; */
   /* width: 100%; */ 
   
+}
+.skills-card-wrapper {
+  /* width: 100%;
+  margin: 0 auto; */
+}
+
+.skills-card {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap:1rem;
+  gap: 10%
+  /* flex-wrap: wrap; */
+  /* justify-content: flex-start; */
+  /* align-items: stretch; */
 }
 .skill > * {
   margin: 0 auto;
@@ -377,7 +392,7 @@
  { 
     padding: .5rem;
     font-weight: 700;
-    font-size: 1rem;
+    font-size: 2rem;
     display: block;
     padding-left: 2rem;
     /* z-index: 11; */
@@ -389,9 +404,20 @@
   .page-skills > h1 {
     color: white;
   }
-  .page-projects > h1 {
+  .page-projects > h1,.page-contact > h1 {
     color: var(--main);
   }
+  .project {
+    /* background-color: #e5b769; */
+    /* width: 50%; */
+    /* margin: 0 auto 3.5rem;  */
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: .5rem;
+    border: 1px solid  var(--main-light); 
+    /* border-radius: .1rem;box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px; */
+  } 
+
 .projects-container {
   margin: 0 auto;
   /* background-color: aquamarine; */
@@ -402,7 +428,24 @@
   position: relative;     */
 } 
  
-   
+.pro-title {
+  /* grid-column: span 3; */
+  background-color: var(--main-light);
+  color: white;
+  line-height: 1;
+  padding: 5%;
+  /* background-image: url('../img/bg/pro-bg.svg'); */
+  /* background-size: cover */
+
+}
+.pro-title > h1 {
+  font-weight: 300;
+  font-size: 3rem;
+}
+.pro-title > h3 {
+  font-weight: 400;
+  font-size: 1rem;
+}
 .gallery-container {
   /* background-color: crimson; */
   /* margin: 1.2rem; */
@@ -419,7 +462,7 @@
 .gallery-main {
   /* background-color: rgb(153, 166, 167);  */
 
-  background-size: contain;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   /* margin-bottom: 1rem; */
@@ -525,6 +568,12 @@
 .gallery-stingy-pic4 {
   background-image: url('../img/projects/stingy/4.jpg');
 }
+.gallery-stingy-pic5 {
+  background-image: url('../img/projects/stingy/5.jpg');
+}
+.gallery-stingy-pic6 {
+  background-image: url('../img/projects/stingy/6.jpg');
+}
 
 
 
@@ -544,7 +593,24 @@
   background-image: url('../img/projects/palabras/4.jpg');
 }
 
+.pro-right {
+  font-size: .85rem;
+  letter-spacing: .1rem;
+  /* margin-right: var(--project-info-card-margin); */
+  /* margin-bottom: var(--project-info-card-margin); */
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  line-height: 1.5;
+  margin-right:1rem;
+  margin-left: 1rem;
+}
 
+.pro-right p a {
+  color: var(--main-dark);
+  font-weight: 800;
+  text-decoration: underline;
+}
 
 .technologies-container {
   background-color: var(--main);
@@ -552,10 +618,14 @@
   border-radius: 5px;
   overflow: hidden;
   border-radius: .4rem;
+
   /* border: 2px solid  var(--main-light);; */
   /* padding:.3rem */
   margin-top: 1rem;
   margin-bottom: 1rem;
+  margin: 0 auto;
+  text-align: center;
+  padding: .5rem;
   /* box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px; */
 }
 .technologies-container h3 {
@@ -572,7 +642,7 @@
   padding: .05rem;
   display: flex;  
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   /* align-items: flex-send; */
 }
 .technology {
@@ -625,6 +695,8 @@
   justify-content: space-between;
   margin-top: auto;
   margin-bottom: 1rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
   /* padding-right: 1rem; */
 }
 .project-info-buttons > * {
@@ -740,13 +812,7 @@
 }
 #card-dice {background-image: url('../img/projects/dice.jpg');
 }
-
-  
-
-
-
-
-
+ 
   .page-resume {
     /* background-color: #6d3d3d; */
     /* height: 30vh; */
@@ -754,11 +820,7 @@
     scroll-snap-align: center;
     display: flex;
     justify-content: center;
-  }
-  .page-contact {
-    /* background-color: #596392; */
-  }
-
+  } 
 
 /* FRONT */
 .page-front h1 {
@@ -771,48 +833,49 @@
   font-size: 1rem;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
-
-.arrow-wrapper {
-  width: 3rem;
-  height: 3rem;
-  border: 3px solid rgb(255, 255, 255);
-  border: 3px solid var(--main);
-  border-radius: 50%;
-  animation: pulse 1.2s infinite;
-  margin-top: 3rem;
-  /* margin-bottom: 2rem; */
-  /* justify-self: flex-end  ; */
-}
-.arrow-wrapper:hover {
-  border: 3px solid var(--main-light);
-  transform: scale(1.3);
-  cursor: pointer;
-}
-.arrow {
-  background-image: url("../img/arrow.svg");
-  filter: invert(49%) sepia(46%) saturate(485%) hue-rotate(45deg) brightness(95%) contrast(87%);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-  width: 100%;
-  height: 100%;
-  transform: scale(.35) rotate(-90deg);
-  display: block;
-}
-
  
+.bold {
+  background-color: var(--main-light);
+  background-color: whitesmoke;
+  border-radius: .2rem;
+  padding: .3rem;
+  font-weight: 600;
+  /* margin: 0 auto; */
+  width: 100%;
+  /* display: ; */
+  text-align: center;
+  /* height: 1rem; */
+}
 /* ABOUT */
 .page-about {
   display: block;
 
 }
-
-.profile-pic {
-  width: 3rem;
-  height: auto;
-  border-radius: 3px;
+.about-pic {
+  background-image: url('/img/profile-pic.jpeg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100%;
+  height: 60vh;
+  height: 15rem;
+  margin: 0 auto
 }
-
+.about-card {
+  width: 85%;
+  /* height: 50%; */
+  min-height: 40%;
+  background-color: white;
+  color: var(--main-dark);
+  margin: auto auto;
+  padding: 6%;
+  border-radius: 5px;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1%;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
+};
+ 
 
 /* RESUME */
 .resume-btn-wrapper {
@@ -855,11 +918,124 @@
 
 
 /* CONTACT */
-.contact-details {
-  background-color: wheat;
+.page-contact {
+  /* background-color: var(--main); */
+  /* background-color: #c73232; */
+  display: block;
+  position: relative;
+  height: 100vh;
+  min-height: 100%;
+}
+.contact-container { 
+  /* background-color: yellow; */
+  position: relative; 
+  width: 100%;
+  /* height: 100%; */
+  /* min-height: 100%; */
+  /* display: block; */
+  margin: 0 auto;
+  /* padding: 3rem; */
+  /* display: flex;  */
+  /* flex-wrap: wrap; */
+  /* justify-content: center; */
+  /* align-items: center ;  */ 
+}
+
+.contact-details { 
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin: 10%;
+  gap: 2rem;
+  /* background-color: blue; */
 }
+.spacer-end {
+  
+  background-image: url('/img/bg/spacer-end.svg');
+  /* height: 50%; */
+  /* width: 100%; */
+  /* width: 100vw; */
+  aspect-ratio: 900/675;
+  position: absolute;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  z-index: -10;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  /* top: -1rem */
+  /* background-color: rgb(148, 238, 130); */
+}
+
+
+.contact-btn {
+  background: white;
+  border: 2px solid var(--main-light);
+  display: flex;
+  width: 40%;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 2%;
+  padding: 2%;
+  border-radius: 3px;
+  text-align: center;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  /* margin:1rem */
+  /* background-image: url("../img/github.png"); */
+}
+.contact-btn a {
+  color: black;
+}
+.mail-logo, .github-logo {
+  /* background-color: #254E70; */
+  height: 3rem;
+  width: 3rem;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  
+}
+
+.mail-logo {
+  background-image: url("../img/mail.svg");
+}
+.github-logo {
+  background-image: url("../img/github-square.svg");
+}
+.mail-logo:hover, .github-logo:hover {
+  transform: scale(1.02);
+}
+.bottom-bg {
+  /* background-color: rgb(74, 167, 74); */
+  width: 100%;
+  height: 100%;
+  margin-top: auto;
+  /* position: relative; */
+  /* z-index: -2; */
+}
+.blob-bottom-wrapper {
+  /* outline: 5px solid blue; */
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.blob-bottom {
+  background-image: url('/img/bg/blob-bottom.svg');
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 900/675;
+  /* position: absolute; */
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  /* z-index: 0; */
+  /* top: -1rem */
+}
+
   @keyframes pulse {
     0% {
       transform: scale(0.95);
@@ -877,13 +1053,12 @@
     }
   }
 
-  /* @media only screen and (max-width: 767px) { */
-    .page-projects > h1 {
-      /* margin: 3rem 3rem; */
+  
+  .page-projects > h1, .page-contact > h1 {
       margin: 0;
       padding-left: 2rem;
       /* background-color: rgb(204, 53, 53); */
-      font-size: 1rem;
+      /* font-size: 1rem; */
     }
      
     .gallery-container {
@@ -939,6 +1114,8 @@
       margin: 1rem 2rem;
     }
  
+
+
   @media only screen and (min-width: 768px) {
   /* FIRST SPACER */
  
@@ -1056,6 +1233,30 @@
   }
 
 
+  .about-card {
+    width: 50%;
+    min-height: 40%;
+    background-color: white;
+    color: var(--main-dark);
+    margin: 10% auto;
+    padding: 1%;
+    border-radius: 5px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1%;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px; */
+  };
+  .about-pic {
+    /* background-image: url('/img/profile-pic.jpeg'); */
+    background-size:cover;
+    /* background-repeat: no-repeat; */
+    /* background-position: center; */
+    /* width: 100%; */
+    /* height: 100%; */
+    height: unset;
+    width: unset;
+    
+  }
 .projects-container {
   margin: unset;
   padding: unset; 
@@ -1084,7 +1285,7 @@
   background-color: var(--main-light);
   color: white;
   line-height: 1.1;
-  padding: 1rem;
+  padding: 3%;
   background-image: url('../img/bg/pro-bg.svg');
   background-size: cover
 
@@ -1113,14 +1314,10 @@
   flex-direction: column;
   justify-content: flex-start;
   line-height: 1.5;
-  margin-right:1rem
-  
+  margin-right: .5rem;
+  margin-left: 0;
 }
-.pro-right p a {
-  color: var(--main-dark);
-  font-weight: 800;
-  text-decoration: underline;
-}
+
 
 .gallery-main {
   height: unset;
@@ -1211,4 +1408,35 @@ transition: .5s ease-in-out transform, 0.3s ease-in-out box-shadow;
   align-items: center;
 }
 
+.technologies-container {
+  background-color: var(--main);
+  background-color: white;
+  border-radius: 5px;
+  overflow: hidden;
+  border-radius: .4rem;
+  /* border: 2px solid  var(--main-light);; */
+  /* padding:.3rem */
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  /* box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px; */
+}
+
+}
+
+@media only screen and (max-width: 768px) {
+  .project {
+    max-width: 92%;
+    margin: 0  auto;
+    margin-bottom: 10%;
+  }
+  .contact-btn {
+    width: 85%;
+  }
+  .spacer-end {
+    background-position: bottom;
+    background-size: unset;
+  }
+  .contact-container {
+    margin-top: 50%;
+  }
 }
