--- a/css/style.css
+++ b/css/style.css
@@ -151,15 +151,15 @@
   }
 
 .container {
-  scroll-snap-type: y proximity;
+  /* scroll-snap-type: y proximity;
   overflow-y: scroll;
-  scroll-behavior: smooth; 
+  scroll-behavior: smooth;  */
   height: 100vh;
 }
   section {
     /* background-color: rgb(177, 145, 177); */
     height: 100vh;
-    scroll-snap-align: start;
+    /* scroll-snap-align: start; */
     /* z-index: 0; */
   }
 
@@ -817,7 +817,7 @@
     /* background-color: #6d3d3d; */
     /* height: 30vh; */
     position: relative;
-    scroll-snap-align: center;
+    /* scroll-snap-align: center; */
     display: flex;
     justify-content: center;
   } 
