--- a/css/style.css
+++ b/css/style.css
@@ -49,13 +49,14 @@
   
   .menu-btn {
     position: fixed;
+    text-align: center;
     z-index: 2;
-    top: -.75rem;
     padding: .75rem;
     border-radius: 50%;
     top: .5rem;
-    text-align: center;
     right: .5rem;
+    /* top: 2%; */
+    /* right: 2%; */
     background-color: white;
   }
 
@@ -151,15 +152,15 @@
   }
 
 .container {
-  /* scroll-snap-type: y proximity;
+  scroll-snap-type: y proximity;
   overflow-y: scroll;
-  scroll-behavior: smooth;  */
+  scroll-behavior: smooth; 
   height: 100vh;
 }
   section {
     /* background-color: rgb(177, 145, 177); */
     height: 100vh;
-    /* scroll-snap-align: start; */
+    scroll-snap-align: start;
     /* z-index: 0; */
   }
 
