--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@
   scroll-snap-type: y proximity;
   overflow-y: scroll;
   overflow-x: hidden;
-  /* scroll-behavior: smooth;  */
+  scroll-behavior: smooth; 
   height: 100vh;
 }
   section {
@@ -1478,7 +1478,7 @@ transition: .5s ease-in-out transform, 0.3s ease-in-out box-shadow;
     margin-bottom: 10%;
   }
   .contact-btn {
-    width: 85%;
+    width: 100%;
   }
   .spacer-end {
     background-position: bottom;
