--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,9 @@
   input[type="checkbox"]{
     display: none
   }
-
+  .about-text {
+    border-radius: inherit;
+  }
   
   .menu-btn {
     position: fixed;
@@ -898,9 +900,10 @@
   background-repeat: no-repeat;
   background-position: center;
   width: 100%;
-  height: 60vh;
-  height: 15rem;
-  margin: 0 auto
+  /* height: 60vh; */
+  height: 10rem;
+  margin: 0 auto;
+  border-radius: 5px;
 }
 .about-card {
   width: 85%;
@@ -913,7 +916,7 @@
   border-radius: 5px;
   display: grid;
   grid-template-columns: 1fr;
-  gap: 5%;
+  gap: 0%;
   /* padding: 11rem; */
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
 };
