--- a/css/style.css
+++ b/css/style.css
@@ -1502,23 +1502,11 @@ transition: .5s ease-in-out transform, 0.3s ease-in-out box-shadow;
   display: block;
   margin-bottom: .3rem;
 }
-.spacer2 {
-  /* background-position: top; */
+.spacer2 { 
   background-size: contain;
   top: 0px;
 }
 .spacer4 {
-  /* background-color: rgb(148, 238, 130 ); */
-  /* background-image: url('/img/bg/wave-main-white2.svg');
-  width: 100%;
-  height: 100vh;
-  aspect-ratio: 1/2;
-  position: absolute;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-  z-index: 0;
-  top: unset; */
   transform: translateY(100%) scaleY(2);
 }
 .project p {
@@ -1526,3 +1514,59 @@ transition: .5s ease-in-out transform, 0.3s ease-in-out box-shadow;
   line-height: 1rem;
 }
 }
+
+.float-card {
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 50px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    transform: translateX(-100%);
+    transition: all ease 500ms;
+    max-width: 75vw;
+}
+.float-card:hover {
+    transform: translateX(0px);
+
+}
+.float-card:hover  h3 {
+  text-decoration: underline;
+}
+
+.float-card:hover .new {
+  background-color: rgb(255, 255, 255);
+  color: rgb(255, 81, 0);
+}
+.content p { 
+  font-size: 16px
+}
+.content {
+  position: relative;
+  background-color: var(--main-light);
+  color: white;
+  padding: 17.5px 40px; 
+}
+ 
+  .new {
+    cursor: pointer;
+    font-size: 26px;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    padding: 7px 5px;
+    writing-mode: vertical-rl;
+    text-orientation: upright; 
+    letter-spacing: -8px;
+    color: white;
+    right: 0;
+    top: 0;
+    min-height: 100%;
+    border-radius: 0px 5px 5px 0px;
+    transform: translateX(100%);
+    background-color: rgb(255, 81, 0);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  }
+
+  .content h3 {
+    text-decoration: underline;
+  }
