--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@
   }
 
 .container {
-  scroll-snap-type: y proximity;
+  /* scroll-snap-type: y proximity; */
   overflow-y: scroll;
   overflow-x: hidden;
   scroll-behavior: smooth; 
@@ -163,7 +163,7 @@
   section {
     /* background-color: rgb(177, 145, 177); */
     height: 100vh;
-    scroll-snap-align: start;
+    /* scroll-snap-align: start; */
     /* z-index: 0; */
 
   }
@@ -846,7 +846,7 @@
     /* background-color: violet; */
     /* height: 30vh; */
     position: relative;
-    scroll-snap-align: center;
+    /* scroll-snap-align: center; */
     /* display: flex; */
     justify-content: center;
 
